--- a/fun/games/index.html
+++ b/fun/games/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>2x :: fun :: games</title>
+  <title>1centrobux :: fun :: games</title>
   <link id="favicon" rel="icon" href="/game.png" type="image/x-icon">
   <link rel="stylesheet" href="/main.css">
 </head>
 <body>
   <div class="content">
-
+Ok Wow It's Games. Wow
     
 here are the games (just dont be chronically online):
     <a href="/fun/games/worldshardestgame.html">World's Hardest Game</a>
