--- a/fun/webamp/index.html
+++ b/fun/webamp/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>
-			2x :: fun :: webamp
+		1centrobux :: fun :: webamp
 		</title>
 		<link id="favicon" rel="icon" href="/cd.png" type="image/x-icon">
 		<style>
