--- a/index.html
+++ b/index.html
@@ -2,30 +2,31 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>2x :: home</title>
+  <title>1centrobux :: home</title>
   <link id="favicon" rel="icon" href="/computer.png" type="image/x-icon">
   <link rel="stylesheet" href="/main.css">
 </head>
 <body>
   <div class="content">
 hello Son
-im 2x
+im 1centrobux
 14, he/him (straight male)
 
-co-founder with <a href="https://guns.lol/jsaest4r">aest4r</a> of <a href="https://pupusas.cc">pupusas.cc</a>
+co-founder of <a href="https://pupusas.cc">pupusas.cc</a>
     
 this is just the homepage of my WIP site
-there are more directories here: 
-   <a href="/archives">/archives</a>: old slop i made w/ friends or by myself for the funny
+there are more directories here (and there will be more to come): 
+   <a href="/misc">/misc</a>: random slop i want to archive here for the funny
    <a href="/fun">/fun</a>: a little collection of tools and games
+   <a href="/thewall">/thewall</a>: a link hub of sorts
 
 contact me:
-   discord: @heyim2x
+   discord: 1centrobux
    matrix: @israelgpt:unredacted.org
-   email: x2hi[at]proton.me
+   email: 1centrobux@proton.me
 
 other miscellaneous accounts of mine:
-    brawl stars: flashcrate (supercell ID)
+    brawl stars: <a href="https://brawlify.com/player/2YVVQ8RRUR">flashcrate</a>
     scratch: <a href="https://scratch.mit.edu/users/heyim2x">heyim2x</a>
 
 any account not listed here that you run into claiming to be me is pretending to be me, and you should disregard it
