--- a/thewall/index.html
+++ b/thewall/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>1centrobux :: archives</title>
-  <link id="favicon" rel="icon" href="/archives.png" type="image/x-icon">
+  <title>1centrobux :: thewall</title>
+  <link id="favicon" rel="icon" href="/thewall.png" type="image/x-icon">
   <link rel="stylesheet" href="/main.css">
 </head>
 <body>
   <div class="content">
 WIP
-  </div>
+  </div> 
 </body>
 </html>
